[gd_scene load_steps=7 format=2]

[ext_resource path="res://ui/fonts/font_square_mini.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://ui/frames/ui_panel.tres" type="StyleBox" id=2]
[ext_resource path="res://scenes/bootup/SubSystem.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 1, 0, 1 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 1 )

[node name="SubSystem" type="PanelContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -128.0
margin_right = 256.0
margin_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 512, 256 )
custom_styles/panel = ExtResource( 2 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="Body" type="VBoxContainer" parent="."]
margin_left = 18.0
margin_top = 18.0
margin_right = 494.0
margin_bottom = 242.0
custom_constants/separation = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="Label" parent="Body"]
margin_right = 476.0
margin_bottom = 40.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "SUB SYSTEM"
align = 1

[node name="Task1" type="Label" parent="Body"]
margin_top = 56.0
margin_right = 476.0
margin_bottom = 86.0
grow_horizontal = 2
custom_colors/font_color = Color( 0, 1, 0, 1 )
custom_fonts/font = SubResource( 2 )

[node name="Task2" type="Label" parent="Body"]
margin_top = 102.0
margin_right = 476.0
margin_bottom = 132.0
grow_horizontal = 2
custom_colors/font_color = Color( 0, 1, 0, 1 )
custom_fonts/font = SubResource( 2 )

[node name="Task3" type="Label" parent="Body"]
margin_top = 148.0
margin_right = 476.0
margin_bottom = 178.0
grow_horizontal = 2
custom_colors/font_color = Color( 0, 1, 0, 1 )
custom_fonts/font = SubResource( 2 )

[node name="Task4" type="Label" parent="Body"]
margin_top = 194.0
margin_right = 476.0
margin_bottom = 224.0
grow_horizontal = 2
custom_colors/font_color = Color( 0, 1, 0, 1 )
custom_fonts/font = SubResource( 2 )

[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
